fixed overflowing map

--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -4,8 +4,12 @@
   left: 0;
   bottom: 0;
   right: 0;
-  height: 100vh;
+  height: 100%;
   z-index: 1;
+}
+
+.wrap {
+  height: 100%;
 }
 
 .map-frame {
